get rid of guava
not really needed for anything serious (and we already depend on java 11).
bit of a cleanup